--- a/css/side-menu.css
+++ b/css/side-menu.css
@@ -61,9 +61,9 @@
     height: 100vh;
     position: fixed;
     left: 0;
-    border-right: 1px solid rgba(255, 255, 255, 0.2);
-    -webkit-box-shadow: 0 1px 10px rgba(0, 0, 0, 0.10196078431372549);
-    box-shadow: 0 1px 10px rgba(0, 0, 0, 0.10196078431372549);
+    border-right: 1px solid rgba(122, 135, 238, 0.3);
+    /* -webkit-box-shadow: 0 1px 10px rgba(0, 0, 0, 0.10196078431372549);
+    box-shadow: 0 1px 10px rgba(0, 0, 0, 0.10196078431372549); */
     overflow: auto;
 }
 
